--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300);
+@import url(https://fonts.googleapis.com/css?family=Lato:100);
 
 * {
 	font-family: 'Lato', sans-serif;
@@ -13,17 +13,19 @@
 }
 
 .countdown {
-	height: 30vh;
+	height: 25vh;
   overflow: hidden;
-  display: block;
+  display: flex;
 	padding-left: 20px;
 	padding-right: 20px;
+	align-items: center;
+	justify-content: center;
 }
 
 #countbox1 {
   text-align: center;
   font-size: 250%;
-  font-weight: 200;
+  font-weight: 100;
   display: block;
   margin-top: 5vh;
   overflow: hidden;
@@ -32,20 +34,31 @@
 
 .main {
 	display: block;
-	height: 70vh;
-	background-image: url("../img/dlfrance2017-logo.png");
+	height: 75vh;
+	background-image: url("");
 	background-repeat: no-repeat;
 	background-size: 300px;
-	background-position: center;
+	background-position: bottom;
 	text-align: center;
 }
 
-a {
-	color: white;
-	transition: 0.2s all;
+.links {
+	height: 52%;
 }
 
-a:hover {
-	color: green;
-	font-size: 150%;
+.background {
+	height: 48%;
+}
+
+.background img {
+	width: 80%;
+}
+
+.links img {
+	height: 160px;
+	transition: transform 0.2s ease;
+}
+
+.links img:hover {
+	transform: scale(1.1);
 }
