--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,18 @@
 .main img:hover {
 	transform: scale(1.1);
 }
+
+.scroller a {
+	color: #ffffff;
+	font-size: 150%;
+}
+
+#lineup {
+	height: 100vh;
+	background-color: #111;
+	color: #ffffff;
+	text-align: center;
+	font-size: 193%;
+	padding: 0;
+	margin: 0;
+}
