--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -7,8 +7,8 @@
   	height: 70%;
   }
 
-  .background img {
-  	width: 600px;
+  .container {
+    overflow: hidden;
   }
 
 }
@@ -22,7 +22,7 @@
     background-position: center;
   }
   .links img {
-    height: 200px;
+    height: 180px;
   }
 
   .links {
@@ -32,7 +32,9 @@
   .background {
   	height: 52%;
   }
-
+  .background img {
+    display: inline;
+  }
 }
 
 @media screen and (min-width: 400px) and (max-width: 619px) {
